Vérifier à chaque evenement si nous sommes sur les map skyblock